--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,15 +5,16 @@ spring:
     password: localpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
 
-
   jpa:
     #    defer-datasource-initialization: true
     database: mysql
     database-platform: org.hibernate.dialect.MySQL8Dialect
-    hibernate.ddl-auto: create
+    hibernate.ddl-auto: update
     properties:
       hibernate:
         default_batch_fetch_size: 100
         format_sql: true
 
-
+  redis:
+    host: localhost
+    port: 6379
