--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
       hibernate:
         default_batch_fetch_size: 100
         format_sql: true
+        show_sql: true
 
   redis:
     host: localhost
