--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -13,11 +13,15 @@ jobs:
       contents: read
 
     steps:
+      - name: pwd
+        run: ls && pwd
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'corretto'
 
-      - name: Build with Gradle
-        run: ./gradlew clean build -x test
+      - name: Setup gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
