--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -23,4 +23,6 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           gradle-version: 8.4
-          arguments: build
+
+      - name: Build with Gradle
+        run: ./gradlew build
