--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -11,21 +11,22 @@ jobs:
       contents: read
 
     steps:
-      - name: Set up JDK 17
+      - uses: actions/checkout@v3
+      - name: Move Java Sample code
         run: |
-          mv ./* /
-        uses: actions/setup-java@v3
+          mv ./* ./
+      - uses: actions/setup-java@v3
         with:
-          java-version: '17'
-          distribution: 'corretto'
+          java-version: "17"
+          distribution: "temurin"
 
-      - name: pwd
-        run: ls && pwd
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v2
 
-      - name: Setup gradle
+      - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
         with:
-          gradle-version: 8.4
+          gradle-version: '8.4'
 
       - name: Build with Gradle
         run: ./gradlew build
