--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -24,4 +24,4 @@ jobs:
           gradle-version: '8.4'
 
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build -x test
