--- a/.github/workflows/book-management-test.yml
+++ b/.github/workflows/book-management-test.yml
@@ -7,7 +7,7 @@ jobs:
   s3:
     name: S3 Upload
     runs-on: ubuntu-latest
-    permission:
+    permissions:
       id-token: write
       contents: read
     steps:
