--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -1,8 +1,10 @@
 name: book-management-ci
 
 on:
-  pull_request:
-    branches: [ "main"]
+  workflow_dispatch:
+
+#  pull_request:
+#    branches: [ "main"]
 
 jobs:
   build:
