--- a/.github/workflows/book-management-test.yml
+++ b/.github/workflows/book-management-test.yml
@@ -26,6 +26,4 @@ jobs:
         run: |
           aws s3 cp build.txt s3://book-management-1/test.txt
       - name: Code Deploy
-        uses: aws-actions/aws-codedeploy@v2
-        with:
-          deployment-group: default-cd
+        run: aws deploy create-deployment --application-name book-management --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name default-cd --s3-location bucket=book-management-1,bundleType=zip,key=server/build.zip
