--- a/.github/workflows/book-management-test.yml
+++ b/.github/workflows/book-management-test.yml
@@ -26,6 +26,8 @@ jobs:
         run: |
           aws s3 cp build.txt s3://book-management-1/test.txt
       - name: Code Deploy
-        run: aws deploy create-deployment --application-name book-management >
-          --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name book-group >  
+        run: aws deploy create-deployment \
+          --application-name book-management \
+          --deployment-config-name CodeDeployDefault.OneAtATime \
+          --deployment-group-name book-group \
           --s3-location bucket=book-management-1,bundleType=txt,key=server/build.zip
