--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -45,6 +45,10 @@ jobs:
           aws-region: ap-northeast-2
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Upload File to AWS S3
         run: |
           aws s3 cp ./$GITHUB_SHA.zip s3://book-management-1/
+
+      - name: Code Deploy
+        run: aws deploy create-deployment --application-name book-management --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name book-group --s3-location bucket=book-management-1,bundleType=zip,key=/$GITHUB_SHA.zip .
