--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -51,4 +51,4 @@ jobs:
           aws s3 cp ./$GITHUB_SHA.zip s3://book-management-1/
 
       - name: Code Deploy
-        run: aws deploy create-deployment --application-name book-management --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name book-group --s3-location bucket=book-management-1,bundleType=zip,key=/$GITHUB_SHA.zip .
+        run: aws deploy create-deployment --application-name book-management --deployment-config-name CodeDeployDefault.OneAtATime --deployment-group-name book-group --s3-location bucket=book-management-1,bundleType=zip,key=$GITHUB_SHA.zip .
