--- a/.github/workflows/book-management-test.yml
+++ b/.github/workflows/book-management-test.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Upload File to AWS S3
         run: |
           aws s3 cp build.txt s3://book-management-1/test.txt
-      - name: Code Deploy
-        run: aws deploy create-deployment --application-name book-management 
-          --deployment-config-name CodeDeployDefault.OneAtATime  
-          --deployment-group-name book-group 
-          --s3-location bucket=book-management-1,bundleType=txt,key=server/build.zip
+#      - name: Code Deploy
+#        run: aws deploy create-deployment --application-name book-management
+#          --deployment-config-name CodeDeployDefault.OneAtATime
+#          --deployment-group-name book-group
+#          --s3-location bucket=book-management-1,bundleType=txt,key=server/build.zip
