--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,6 @@ permissions:
     mode: 755
 hooks:
   AfterInstall:
-    - location: deploy.sh
+    - location: script/deploy.sh
       timeout: 60
       runas: root
