--- a/appspec.yml
+++ b/appspec.yml
@@ -9,7 +9,7 @@ permissions:
     group: ubuntu
     mode: 755
 hooks:
-  AfterInstall:
+  ApplicationStart:
     - location: script/deploy.sh
       timeout: 60
       runas: root
