--- a/appspec.yml
+++ b/appspec.yml
@@ -1,15 +1,17 @@
 version: 0.0
 os: linux
+
 files:
   - source: /
     destination: /home/ubuntu/project
+    overwrite: yes
 permissions:
   - object: /home/ubuntu/project
     owner: ubuntu
     group: ubuntu
     mode: 755
 hooks:
-  ApplicationStart:
+  AfterInstall:
     - location: script/deploy.sh
-      timeout: 60
+      timeout: 180
       runas: root
