--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -26,6 +26,7 @@ jobs:
         run: ./gradlew build -x test
 
   s3:
+    needs: build
     name: S3 Upload
     runs-on: ubuntu-latest
     permissions:
