--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           gradle-version: '8.4'
 
+      - name: Build with Gradle
+        run: ./gradlew build -x test
+
       - name: ls
         run: echo "output = " >> ${GITHUB_OUTPUT}
-
-      - name: Build with Gradle
-        run: clean build -x test
 
   s3:
     needs: build
