--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Make Zip File
-        run: zip -r ./$GITHUB_SHA.zip .
+        run: zip -r -a ./$GITHUB_SHA.zip .
         shell: bash
 
       - name: AWS Credentials
