--- a/.github/workflows/book-management-ci.yml
+++ b/.github/workflows/book-management-ci.yml
@@ -23,10 +23,10 @@ jobs:
           gradle-version: '8.4'
 
       - name: Build with Gradle
-        run: ./gradlew build -x test
-
-      - name: ls
-        run: echo "output = " >> ${GITHUB_OUTPUT}
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build
+          build-root-directory: .
 
   s3:
     needs: build
@@ -40,7 +40,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Make Zip File
-        run: zip -r -a ./$GITHUB_SHA.zip .
+        run: zip -r ./$GITHUB_SHA.zip .
         shell: bash
 
       - name: AWS Credentials
