--- a/appspec.yml
+++ b/appspec.yml
@@ -10,6 +10,7 @@ permissions:
     pattern: "**"
     owner: ubuntu
     group: ubuntu
+    mode: 777
 hooks:
   ApplicationStart:
     - location: scripts/deploy.sh
